examples/handwritten-scala/grammar.js
    compilation_unit: $ => repeat($._definition),
    /*
     * scala.ebnf:23-35
     * _definition                          ::= package_clause
     *                                        | package_object
     *                                        | class_definition
     *                                        | import_declaration
     *                                        | object_definition
     *                                        | trait_definition
     *                                        | val_definition
     *                                        | val_declaration
     *                                        | var_definition
     *                                        | var_declaration
     *                                        | type_definition
     *                                        | function_definition
     *                                        | function_declaration
     */
    _definition: $ => choice(
                        $.package_clause,
                        $.package_object,
                        $.class_definition,
                        $.import_declaration,
                        $.object_definition,
                        $.trait_definition,
                        $.val_definition,
                        $.val_declaration,
                        $.var_definition,
                        $.var_declaration,
                        $.type_definition,
                        $.function_definition,
                        $.function_declaration
                      ),
    /*
     * scala.ebnf:36
     * package_clause                       ::= 'package' (package_identifier: name) (template_body?: body)
     */
    val_definition: $ => seq(
                           repeat($.annotation),
                           optional($.modifiers),
                           'val',
                           field('pattern', $._pattern),
                           optional(seq(':', field('type', $._type))),
                           '=',
                           field('value', $._expression)
                         ),
    /*
     * scala.ebnf:63
     * val_declaration                      ::= annotation* modifiers? 'val' ((identifier: name) (',' (identifier: name))*) ':' (_type: type)
     */
    _block: $ => prec.left(
                   seq(
                     seq(
                       choice($._expression, $._definition),
                       repeat(seq($._semicolon, choice($._expression, $._definition)))
                     ),
                     optional($._semicolon)
                   )
                 ),
    /*
     * scala.ebnf:88
     * block                                ::= '{' _block? '}'
     */
    block: $ => seq('{', optional($._block), '}'),
    /*
     * scala.ebnf:89
     * _type                                ::= function_type | compound_type | infix_type | _annotated_type
     */
    _type: $ => choice($.function_type, $.compound_type, $.infix_type, $._annotated_type),
    /*
     * scala.ebnf:90
     * _annotated_type                      ::= >(_simple_type annotation*)
     */
    _pattern: $ => choice(
                     $.identifier,
                     $.capture_pattern,
                     $.tuple_pattern,
                     $.case_class_pattern,
                     $.infix_pattern,
                     $.alternative_pattern,
                     $.typed_pattern,
                     $.number,
                     $.string,
                     $.wildcard
                   ),
    /*
     * scala.ebnf:120
     * case_class_pattern                   ::= ((_type_identifier | stable_type_identifier): type) '(' ((_pattern (',' _pattern)*)?: pattern) ')'
     */
    _expression: $ => choice(
                        $.if_expression,
                        $.match_expression,
                        $.try_expression,
                        $.call_expression,
                        $.generic_function,
                        $.assignment_expression,
                        $.parenthesized_expression,
                        $.interpolated_string_expression,
                        $.field_expression,
                        $.instance_expression,
                        $.infix_expression,
                        $.prefix_expression,
                        $.tuple_expression,
                        $.case_block,
                        $.block,
                        $.identifier,
                        $.number,
                        $.string
                      ),
    /*
     * scala.ebnf:144-145
     * if_expression                        ::= >('if' (parenthesized_expression: condition) (_expression: consequence)
     *                                            ('else' (_expression: alternative))?)
     */
    identifier: $ => /[a-zA-Z_]\w*/,
    /*
     * scala.ebnf:165
     * wildcard                             ::= '_'
     */
    number: $ => /[\d\.]+/,
    /*
     * scala.ebnf:168
     * interpolated_string_expression       ::= identifier interpolated_string
     */
    interpolated_string_expression: $ => seq($.identifier, $.interpolated_string),
    /*
     * scala.ebnf:169
     * _interpolated_string_start           ::= '"'
     */
    _interpolated_string_start: $ => '"',
    /*
     * scala.ebnf:170
     * _interpolated_multiline_string_start ::= '"""'
     */
    _interpolated_multiline_string_start: $ => '"""',
    /*
     * scala.ebnf:171
     * interpolation                        ::= '$' (identifier | block)
     */
    interpolation: $ => seq('$', choice($.identifier, $.block)),
    /*
     * scala.ebnf:172-173
     * interpolated_string                  ::= (_interpolated_string_start (_interpolated_string_middle interpolation)* _interpolated_string_end)
     *                                        | (_interpolated_multiline_string_start (_interpolated_multiline_string_middle interpolation)* _interpolated_multiline_string_end)
     */
    interpolated_string: $ => choice(
                                seq(
                                  $._interpolated_string_start,
                                  repeat(seq($._interpolated_string_middle, $.interpolation)),
                                  $._interpolated_string_end
                                ),
                                seq(
                                  $._interpolated_multiline_string_start,
                                  repeat(seq($._interpolated_multiline_string_middle, $.interpolation)),
                                  $._interpolated_multiline_string_end
                                )
                              ),
    /*
     * scala.ebnf:174
     * string                               ::= _simple_string | _simple_multiline_string
     */
    string: $ => choice($._simple_string, $._simple_multiline_string),
    /*
     * scala.ebnf:175
     * _semicolon                           ::= ';' | _automatic_semicolon
     */
